# EsGUIPatriottico

./: main.py  pyproject.toml
